# Unitra

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agent/: __init__.py  main.py
data/: recent.json
routes/: desktop.py  flow_history.py  generate.py  pages.py  runner.py  workspace.py
src/: __init__.py  api.py  cli.py  config.py  container.py  generator.py  parser.py  recent.py  serializers.py
src/application/: __init__.py  ai_policy.py  doctor.py  exceptions.py  guided_services.py  models.py  services.py  source_utils.py  workspace_models.py  workspace_services.py
src/generator_plugins/: __init__.py  base.py  builtin.py  registry.py
src/infrastructure/: __init__.py  agent_profile_repository.py  ai_runner.py  desktop_task_manager.py  generation_cache_repository.py  job_repository.py  recent_repository.py  run_history_repository.py  settings_repository.py  simple_toml.py  source_loader.py  test_executor.py  test_file_planner.py  test_writer.py  workspace_repository.py
src/tui/: __init__.py  actions.py  app.py  state.py
src/ui/: __init__.py  styles.py
static/: ai.js  dashboard.css  dashboard.js  desktop.js  home.css  main.js  project.js  style.css
static/data/: examples.json
static/scripts/: brand-bubble.js  examples.js  greeting.js  home.js  output-actions.js  shortcuts.js  (+4 more)
templates/: ai.html  base.html  home.html  index.html  info.html  loading.html  project.html  quick.html  settings.html  workspace.html
test_samples/: 1.py  2.py  3_calculator.py  4_string_utils.py  5_user.py  test_generated.py
tests/: custom_generator_plugin.py  test_cli.py  test_cli_console.py  test_cli_workspace.py  test_doctor.py  test_generator.py  test_generator_internals.py  test_generator_plugins.py  test_parser.py  test_parser_extra.py  test_recent.py  test_route_helpers.py  test_routes_refactor.py  test_services.py  test_tui_actions.py  test_tui_state.py  test_workspace_tooling.py
(+21 files in other folders)
