[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitra"
version = "0.1.0"
description = "Workspace-first Python test tooling with CLI and desktop UI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.1.3",
    "pywebview==6.1",
    "langchain==0.3.28",
    "langchain-openai==0.3.35",
    "langchain-core==0.3.83",
    "python-dotenv==1.2.1",
    "textual==0.62.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
unitra = "src.cli:main"

[project.entry-points."unitra.generators"]
vanilla = "src.generator_plugins.builtin:VanillaPythonGenerator"
web_api = "src.generator_plugins.builtin:FastApiFlaskGenerator"
django = "src.generator_plugins.builtin:DjangoGenerator"
schema_models = "src.generator_plugins.builtin:PydanticDataclassGenerator"
data_science = "src.generator_plugins.builtin:DataScienceGenerator"

[tool.setuptools]
packages = ["src", "src.application", "src.generator_plugins", "src.infrastructure", "src.tui", "src.tui.screens", "src.tui.widgets", "src.ui", "agent", "routes"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
